--- a/01-About.html
+++ b/01-About.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/TenDrum.css">
+    <link rel="stylesheet" href="./CSS/wickedcss.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- 一頁式輪播 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.css">
+    <!-- 一頁式輪播 -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!-- google-font -->
@@ -20,8 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <!-- 英文字體 -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
-    <link rel="stylesheet" href="./subtitle.css">
-    <link rel="stylesheet" href="./subtitle-r.css">
+    <link rel="stylesheet" href="./CSS/subtitle.css">
+    <link rel="stylesheet" href="./CSS/subtitle-r.css">
     <style>
         #fp-nav ul li a span,
         #menu-line,
@@ -37,9 +40,6 @@
             border-style: solid;
             border-width: 25px 0 25px 25px;
             border-color: transparent transparent transparent #3e3a39;
-
-
-
         }
 
         .fp-controlArrow.fp-prev {
@@ -49,7 +49,6 @@
             border-style: solid;
             border-width: 25px 25px 25px 0;
             border-color: transparent #3e3a39 transparent transparent;
-
         }
     </style>
 </head>
@@ -112,18 +111,18 @@
         <div class="section sec-00 sec">
             <div class="sec-00-1">
                 <div class=" About">
-                <div class="en-title">
-                    <div class="About-t">About
-                        <u class="line01">
-                            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u></div>
+                    <div class="en-title">
+                        <div class="About-t">About
+                            <u class="line01">
+                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u></div>
 
-                </div>
-                <div class="cn-title">
-                    <div class="big-size">&emsp;<u class="line02">&emsp;</u>關</div>於十鼓
+                    </div>
+                    <div class="cn-title">
+                        <div class="big-size">&emsp;<u class="line02">&emsp;</u>關</div>於十鼓
+                    </div>
                 </div>
             </div>
-            </div>
-            
+
         </div>
         <div class="section sec-01" data-anchor="firstPage">
             <div class="sec sec-01-1">
@@ -293,7 +292,8 @@
             <div class="slide horizontal-slide" data-anchor="ninthPage">特色餐飲</div>
             <div class="slide horizontal-slide" data-anchor="tenthPage">
                 文創空間</div>
-        </div><footer>版權聲明</footer>
+        </div>
+        <footer>版權聲明</footer>
     </div>
     <footer>版權聲明</footer>
 
