--- a/04-Drum.html
+++ b/04-Drum.html
@@ -1,87 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/TenDrum.css">
+    <link rel="stylesheet" href="./CSS/wickedcss.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- Icon -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!-- Icon -->
+    <!-- google-font -->
+    <!-- 中文字體 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
+    <!-- 中文字體 -->
+    <!-- 英文字體 -->
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
+    <!-- 英文字體 -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
 </head>
+
 <body>
-   <!-- 漢堡條 -->
-   <div class="hamburger">
-    <div class="ham-ani">
-        <div class="stick stick-1"></div>
-        <div class="stick stick-2"></div>
-        <div class="stick stick-3"></div>
-    </div>
-    <div class="ham-menu">MENU</div>
-</div>
-<div class="btn-groupxxx">
-    <div class="decoration">&emsp;</div>
-    <div class="btnsss">
-        <div class="icons">
-            <div class="icon">FB</div>
-            <div class="icon">Line</div>
-            <div class="icon">E-mail</div>
+    <nav>
+        <!-- 漢堡條 -->
+        <div class="hamburger">
+            <div class="ham-ani">
+                <div class="stick stick-1"></div>
+                <div class="stick stick-2"></div>
+                <div class="stick stick-3"></div>
+            </div>
+            <div class="ham-menu">MENU</div>
         </div>
-        <div class="btns">
-            <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
-            <a href="./01-About.html" class="btn">
-                <h1>關於十鼓</h1>
-            </a>
-            <a href="./02-News.html" class="btn">
-                <h1>最新消息</h1>
-            </a>
-            <a href="./03-Facility.html" class="btn">
-                <h1>設施體驗</h1>
-            </a>
-            <a href="./04-Drum.html" class="btn">
-                <h1>鼓樂饗宴</h1>
-            </a>
-            <a href="./05-Information.html" class="btn">
-                <h1>入園資訊</h1>
-            </a>
-            <a href="./06-Rented.html" class="btn">
-                <h1>場地租借</h1>
-            </a>
-        </div>
-        <div class="infor">
-            <div class="top">
-                <div class="lan en">EN</div>
-                <div class="lan cn">中</div>
+        <div class="btn-groupxxx">
+            <div class="decoration">&emsp;</div>
+            <div class="btnsss">
+                <div class="icons">
+                    <div class="icon">FB</div>
+                    <div class="icon">Line</div>
+                    <div class="icon">E-mail</div>
+                </div>
+                <div class="btns">
+                    <a href="./index.html" class="btn btn-index">Home&nbsp;<i class="far fa-home"></i></a>
+                    <a href="./01-About.html" class="btn">
+                        <h1>關於十鼓</h1>
+                    </a>
+                    <a href="./02-News.html" class="btn">
+                        <h1>最新消息</h1>
+                    </a>
+                    <a href="./03-Facility.html" class="btn">
+                        <h1>設施體驗</h1>
+                    </a>
+                    <a href="./04-Drum.html" class="btn">
+                        <h1>鼓樂饗宴</h1>
+                    </a>
+                    <a href="./05-Information.html" class="btn">
+                        <h1>入園資訊</h1>
+                    </a>
+                    <a href="./06-Rented.html" class="btn">
+                        <h1>場地租借</h1>
+                    </a>
+                </div>
+                <div class="infor">
+                    <div class="top">
+                        <div class="lan en">EN</div>
+                        <div class="lan cn">中</div>
+                    </div>
+                </div>
+                <div class="bott">
+                    <p>TEL06-2662225</p>
+                    <p>台南市仁德區文華路二段326號
+                    </p>
+                </div>
             </div>
         </div>
-        <div class="bott">
-            <p>TEL06-2662225</p>
-            <p>台南市仁德區文華路二段326號
-            </p>
+        <!-- 漢堡條 -->
+    </nav>
+
+    <!-- 內文 -->
+    <section>
+        <div class="Drum">
+            <!-- 項目清單 -->
+            <div class="Drum-title-group">
+                <h1 class="drum--big-title">鼓樂饗宴</h1>
+                <h2 class="drum-mid-title">關於十鼓樂團</h2>
+                <h2 class="drum-mid-title">演出紀錄&事記</h2>
+                <h2 class="drum-mid-title">得獎作品</h2>
+                <h2 class="drum-mid-title">主要成員</h2>
+                <h2 class="drum-mid-title">演出時間</h2>
+            </div>
+            <!-- 項目清單 -->
+
+            <!-- 翻書效果 -->
+            <div class="book">
+                <div id="pages" class="pages">
+                    <div class="page">
+                        <div class="page-text">翻我</div>
+                    </div>
+                    <div class="page"><img src="./img/5b84e4aeaa904.jpg" class="page-img" alt=""></div>
+                    <div class="page">
+                        <div class="page-text">
+                            <h3>關於十鼓樂團</h3>
+                            <h6>成立於2000年春天，『傳創台灣土本文化，發揚鼓樂藝術
+                                薪傳』是樂團最大發展目標。而「十」字代表著鼓棒交疊，
+                                匯集十方的能量，共同凝聚團結的力量「十鼓」以文化的力
+                                量串連起城市運轉的特色及風格，2007年於台南縣仁德鄉成
+                                立「十鼓文化村」，更進一步朝打造『亞洲鼓樂交流平台』
+                                的文化發展目標努力，堅持以傳創本土擊樂藝術為定位，期
+                                望藉此喚起國人對傳統鼓樂的重視，企圖為台灣開創出一個
+                                熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格，更期
+                                望能使台灣在世界上成為著名的【鼓樂之島】。</h6>
+                            <h6>多年來，樂團傳創的音樂作品深受觀眾的喜愛，以在地的題
+                                材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面
+                                貌，更令社會大眾驚豔原來『鼓』是如此的多元及精彩！此
+                                外，十鼓擊樂團亦秉持：傳創本土擊樂、普及全民鼓術、落
+                                實人本教育、開啟多元智慧、推動特教啟蒙，廣納世界文化
+                                、為推廣鼓樂藝術之宗旨目標。</h6>
+                        </div>
+                    </div>
+                    <div class="page">
+                        <div class="page-text">
+                            <h3>演出紀錄&事記</h3>
+                            <h6>
+                                <div class="text-time">2017&emsp;</div>
+                                <div class="text-con">嘉義文創園區-十鼓囪擊劇場成立</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2016&emsp;</div>
+                                <div class="text-con">受國家兩廳院邀請與歐陸巨擘導演狄奧多羅斯‧特爾左布勒斯跨國合作「酒神的女信徒」，鼓樂創作暨演出/國家兩廳院藝文廣場（戶外）
+                                </div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2016&emsp;</div>
+                                <div class="text-con">受邀至中華民國外交部國慶酒會演出</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2016&emsp;</div>
+                                <div class="text-con">受邀至馬祖南竿媽祖在馬祖昇天祭演出</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2015&emsp;</div>
+                                <div class="text-con">受家樂福文教基金會邀請演出「鼓的傳說」音樂會/國家兩廳院藝文廣場</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2014&emsp;</div>
+                                <div class="text-con">與法國舞團Karine Saporta合作《TAM-Tai》於巴黎音樂廳演出</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2014&emsp;</div>
+                                <div class="text-con">受邀至英國 愛丁堡藝穗節巡演（首度參與2014愛丁堡藝穗節臺灣季演出榮獲5星級評價）</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2013&emsp;</div>
+                                <div class="text-con">榮獲亞洲文化推展聯盟入選2013年「亞洲藝術瑰寶」台灣代表團隊之一，於泰國清邁參演國際性亞洲文化年會之頒獎典禮</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2011&emsp;</div>
+                                <div class="text-con">參加法國參議院藝術節、亞維儂藝術節、普羅旺斯Minos 藝術節</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2010&emsp;</div>
+                                <div class="text-con">受美國PAS打擊樂藝術協會邀請，至印第安納州參與「美國PAS世界打擊樂藝術年會」演出</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2010&emsp;</div>
+                                <div class="text-con">法國城堡區東方藝術節、法國亞維儂藝術節</div>
+                            </h6>
+                            <h6>
+                                <div class="text-time">2009&emsp;</div>
+                                <div class="text-con">【鼓之島】專輯入圍第9屆美國獨立音樂獎<最佳世界傳統音樂專輯></div>
+                            </h6>
+                        </div>
+                    </div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                    <div class="page"></div>
+                </div>
+            </div>
+            <!-- 翻書效果 -->
+
         </div>
-    </div>
-</div>
-<!-- 漢堡條 --> 
+    </section>
+    <!-- 內文 -->
+    <!-- JS -->
 
-<!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-crossorigin="anonymous"></script>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        ////漢堡條///
+        const hamburger = document.querySelector('.hamburger')
+        const btn_group = document.querySelector('.btn-groupxxx')
+        const btns = btn_group.querySelector('.btn')
 
-<script>
-////漢堡條///
-const hamburger = document.querySelector('.hamburger')
-const btn_group = document.querySelector('.btn-groupxxx')
-const btns = btn_group.querySelector('.btn')
-
-const offclick = () => {
+        const offclick = () => {
             btn_group.classList.toggle("active")
             document.removeEventListener('click', offclick)
             $(".stick").toggleClass(function () {
@@ -113,7 +262,33 @@ const offclick = () => {
             });
         });
         ///3條線變叉叉///
-///漢堡條///
-</script>
+        ///漢堡條///
+
+        var pages = document.getElementsByClassName('page');
+        for (var i = 0; i < pages.length; i++) {
+            var page = pages[i];
+            if (i % 2 === 0) {
+                page.style.zIndex = (pages.length - i);
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', function () {
+            for (var i = 0; i < pages.length; i++) {
+                //Or var page = pages[i];
+                pages[i].pageNum = i + 1;
+                pages[i].onclick = function () {
+                    if (this.pageNum % 2 === 0) {
+                        this.classList.remove('flipped');
+                        this.previousElementSibling.classList.remove('flipped');
+                    }
+                    else {
+                        this.classList.add('flipped');
+                        this.nextElementSibling.classList.add('flipped');
+                    }
+                }
+            }
+        })
+    </script>
 </body>
+
 </html>
